Risolti molti issues